--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
@@ -19,7 +20,7 @@
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
-    "postcss": "^8",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
