--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+    "start": "next start"
+  
+},
   "dependencies": {
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.469.0",
