--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
-  
-},
+  },
   "dependencies": {
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
