--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
