--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
